[package]
name = "hextorgb2"
version = "0.1.0"
authors = ["Porfirio Rodriguez <porfiriorodt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.0.5"
regex-syntax = "0.6.25"
thread_local = "1.1.3"
aho-corasick = "0.7.15"
utf8-ranges = "1.0.1"
ucd-util = "0.1.1"
version_check = "0.9.2"
lazy_static = "1.1.0"
libc = "0.2.43"
cfg-if = "1.0.0"
memchr = "2.4.0"
color-convert = "0.1.0"